[gd_scene load_steps=3 format=3 uid="uid://b7j8lal0m1n2o"]

[ext_resource type="Script" uid="uid://dryldvqnyg4nw" path="res://Scripts/settings.gd" id="1_settings"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 36

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="CenterContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0

[node name="MusicValueLabel" type="Label" parent="CenterContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "50"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Back to Main Menu"
